# abacus

./: .gitignore  Cargo.toml  README.md
src/: actions.rs  config.rs  expr.rs  main.rs  plan.rs  plans.rs  tool.rs  workflow.rs
src/config/: data.rs  export.rs  import.rs  input.rs  output.rs  tools.rs
test/: notes.txt
test/data/: name-codes.parquet
test/data/csv/: cars-no-header.csv  cars1.csv  cars2.csv  userdata2.csv  userdata3.csv  userdata4.csv  userdata5.csv
test/data/json/: books.json  colors.json
test/plans/: csv-large.json  filter-2mil.json  join-2mil.json  join.json  no-links.json  plan1.json  plan2.json  select-2mil.json  sort-2mil.json
