[package]
name = "abacus"
version = "0.1.0"
edition = "2021"
authors = ["Michael Pyle"]
description = "Analytic Processor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
datafusion = "35.0.0"
petgraph = "0.6.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["full"] }

[profile.release]
lto = "thin"
codegen-units = 1
incremental = true
