[package]
name = "abacus"
version = "0.1.0"
edition = "2021"
authors = ["Michael Pyle"]
description = "Analytic Processor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
datafusion = "39.0.0"
petgraph = "0.6.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }

[profile.release]
lto = "thin"
codegen-units = 1
incremental = true
