[package]
name = "abacus"
version = "0.1.0"
edition = "2021"
authors = ["Michael Pyle"]
description = "Analytic Processor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
datafusion = "44.0.0"
petgraph = "0.7.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }

[profile.release]
lto = "thin"
codegen-units = 1
incremental = true
